--- a/Mall/app.wxss
+++ b/Mall/app.wxss
@@ -3,11 +3,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+/**公共样式**/
+
 .flex-wrap{
 	display: flex;
 }
